--- a/changelog
+++ b/changelog
@@ -20,3 +20,5 @@
 # Started adding set functionality
 # 0.1.1: Thu 30 May 2019 13:18:27 AEST
 # Added mask function
+# 0.1.2: Thu 30 May 2019 18:16:20 AEST
+# Initial working poweron/poweroff/reset function
