--- a/changelog
+++ b/changelog
@@ -24,3 +24,5 @@
 # Initial working poweron/poweroff/reset function
 # 0.1.3: Thu 30 May 2019 18:49:13 AEST
 # Fixed headless mode for geckodriver
+# 0.1.4: Thu 30 May 2019 23:08:50 AEST
+# Added code to check for and start MeshCommander
