--- a/changelog
+++ b/changelog
@@ -26,3 +26,5 @@
 # Fixed headless mode for geckodriver
 # 0.1.4: Thu 30 May 2019 23:08:50 AEST
 # Added code to check for and start MeshCommander
+# 0.1.5: Fri 31 May 2019 03:35:57 AEST
+# Bug fix with set code and documentation update
