--- a/changelog
+++ b/changelog
@@ -28,3 +28,5 @@
 # Added code to check for and start MeshCommander
 # 0.1.5: Fri 31 May 2019 03:35:57 AEST
 # Bug fix with set code and documentation update
+# 0.1.6: Fri 31 May 2019 03:52:20 AEST
+# Updated documentation
