--- a/changelog
+++ b/changelog
@@ -32,3 +32,5 @@
 # Updated documentation
 # 0.1.7: Fri 31 May 2019 05:36:52 AEST
 # Added initial code for dealing with passwords
+# 0.1.8: Fri 31 May 2019 07:01:31 AEST
+# Updated documentation and added support to connect over SOL
