Added code to set hostname and domainname

--- a/changelog
+++ b/changelog
@@ -38,3 +38,5 @@
 # Fixed a couple of bugs and cleaned up web driver initiation
 # 0.2.0: Sat  1 Jun 2019 19:42:53 AEST
 # Code cleanup
+# 0.2.1: Sat  1 Jun 2019 20:50:53 AEST
+# Added code to set hostname and domainname
