--- a/changelog
+++ b/changelog
@@ -44,3 +44,5 @@
 # Added code to download BIOS
 # 0.2.3: Sun  2 Jun 2019 13:42:10 AEST
 # Added code to start MeshCentral
+# 0.2.4: Sun  2 Jun 2019 21:04:00 AEST
+# Updated set code to deal with more options
