--- a/changelog
+++ b/changelog
@@ -52,3 +52,5 @@
 # Fixed issue with HTML parsing and added connectivity test
 # 0.2.7: Sun 27 Oct 2019 10:01:20 AEDT
 # Added initial support for MeshCmd
+# 0.2.8: Sun 27 Oct 11:18:29 AEDT 2019
+# Python pip and other fixes
