Various bug fixes

--- a/changelog
+++ b/changelog
@@ -54,3 +54,5 @@
 # Added initial support for MeshCmd
 # 0.2.8: Sun 27 Oct 11:18:29 AEDT 2019
 # Python pip and other fixes
+# 0.2.9: Sun 27 Oct 12:54:08 AEDT 2019
+# Various bug fixes
