--- a/changelog
+++ b/changelog
@@ -66,3 +66,7 @@
 # Added iDRAC set capability
 # 0.3.4: Thu 21 Nov 2019 12:31:45 AEDT
 # Added iDRAC power on/off capability
+# 0.3.5: Mon 25 Nov 2019 12:50:14 AEDT
+# Added iDRAC KVM redirection tool and iDRAC sol capability
+# 0.3.5: Tue  3 Dec 2019 19:33:42 AEDT
+# Updated MeshCommander code to support global module install directory
