--- a/changelog
+++ b/changelog
@@ -78,3 +78,5 @@
 # Cleaned up web iDRAC code and added Java iDRAC code
 # 0.3.9: Fri 29 May 2020 14:21:13 AEST
 # Bug fixes
+# 0.4.0: Sat 30 May 2020 15:24:54 AEST
+# Added support for APC PDUs
