Added code to set a list of specific iDRAC values from a file

--- a/changelog
+++ b/changelog
@@ -92,3 +92,5 @@
 # Code cleanup
 # 0.4.6: Mon 25 Oct 2021 20:31:28 AEDT
 # Added code to set specific iDRAC values
+# 0.4.7: Mon 25 Oct 2021 22:25:47 AEDT
+# Added code to set a list of specific iDRAC values from a file
